--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     <jtds.version>1.2.4</jtds.version>
     <junit.version>RELEASE</junit.version>
     <lombok.version>1.18.10</lombok.version>
+    <sl4j.logger.version>1.7.25</sl4j.logger.version>
   </properties>
 
   <dependencies>
@@ -72,6 +73,12 @@
       <version>RELEASE</version>
       <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${sl4j.logger.version}</version>
+    </dependency>
     <!--    <dependency>-->
     <!--      <groupId>io.netty</groupId>-->
     <!--      <artifactId>netty-all</artifactId>-->
@@ -105,8 +112,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>6</source>
-          <target>6</target>
+          <source>7</source>
+          <target>7</target>
         </configuration>
       </plugin>
     </plugins>
