--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ buildNumber.properties
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/*
 
 # Generated files
 .idea/**/contentModel.xml
@@ -120,9 +121,5 @@ hs_err_pid*
 .idea/vcs.xml
 LocalClusterUtils.iml
 data/
-logs/info.log.2019-11-07
-logs/info.log.2019-11-10
-logs/info.log.2019-11-11
-logs/info.log.2019-11-15
-logs/info.log.2019-11-16
+logs/info.log.*
 metastore_db/
